@@ -35,10 +35,8 @@ static void timer_add(struct us_conntrack *u, void *data)
 {
 	struct alarm_list *alarm = data;
 
-	init_alarm(alarm);
+	init_alarm(alarm, u, timeout);
 	set_alarm_expiration(alarm, CONFIG(cache_timeout), 0);
-	set_alarm_data(alarm, u);
-	set_alarm_function(alarm, timeout);
 	add_alarm(alarm);
 }
 
