@@ -87,9 +87,8 @@ static void do_alive_alarm(struct alarm_list *a, void *data)
 {
 	tx_queue_add_ctlmsg(NET_F_ALIVE, 0, 0);
 
-	init_alarm(&alive_alarm);
+	init_alarm(&alive_alarm, NULL, do_alive_alarm);
 	set_alarm_expiration(&alive_alarm, 1, 0);
-	set_alarm_function(&alive_alarm, do_alive_alarm);
 	add_alarm(&alive_alarm);
 }
 
@@ -111,9 +110,8 @@ static int ftfw_init()
 	INIT_LIST_HEAD(&rs_list);
 
 	/* XXX: alive message expiration configurable */
-	init_alarm(&alive_alarm);
+	init_alarm(&alive_alarm, NULL, do_alive_alarm);
 	set_alarm_expiration(&alive_alarm, 1, 0);
-	set_alarm_function(&alive_alarm, do_alive_alarm);
 	add_alarm(&alive_alarm);
 
 	return 0;
